@@ -1,3 +1,8 @@
+2018-07-12  nixargh  <nixargh@protonmail.com>
+
+	* dns/rdatatype.py: new IN types support: DYNA, DNYC.
+	  These type are used by gdnsd (https://github.com/gdnsd/gdnsd).
+
 2017-01-02  Bob Halley  <halley@dnspython.org>
 
 	* dns/e164.py: to_e164() was returning binary instead of text,
